--- a/keymanage/pom.xml
+++ b/keymanage/pom.xml
@@ -47,6 +47,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.46</version>
+		</dependency>
 
 	</dependencies>
 
